--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<source src="underconstruction1.mp4" type="video/mp4">
 		<source src="underconstruction.webm" type="video/webm">
 		<source src="underconstruction.ogg" type="video/ogg">
+		<source src="underconstruction.3gp" >
 	</video>
 </div>
 
