--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
 	</style>
 </head>
 <body>
-<div class="fullscreen-bg">
+<!--<div class="fullscreen-bg">
 	<video  muted autoplay poster="underconstruction.jpg" class="fullscreen-bg__video">
 		<source src="underconstruction1.mp4" type="video/mp4">
 		<source src="underconstruction.webm" type="video/webm">
 		<source src="underconstruction.ogg" type="video/ogg">
 		<source src="underconstruction.3gp" >
 	</video>
-</div>
+</div>-->
 
-<!--<a href="#" id="link">play</a>
 <div id="player"></div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script>
-		
+		var width = $(window).width();
+		var height = $(window).height();
+		console.log(width);
+		console.log(height);
 		// Load API asynchronously.
 		var tag = document.createElement('script');
 		tag.src = "https://www.youtube.com/iframe_api";
@@ -48,9 +50,14 @@
 		var player;
 		function onYouTubeIframeAPIReady() {
 		    player = new YT.Player('player', {
-		        height: '390',
-		        width: '640',
-		        videoId: 'GKAJBC6c1GM',
+		        height: height,
+		        width: width,
+		        playerVars: { 
+		        	'autoplay': 1, 
+		        	'controls': 0,
+		        	'rel' : 0
+		        },
+		        videoId: 'aR4r_4Dbrk8',
 		        events: {
 		        	'onReady': onPlayerReady,
 		        	'onStateChange': onPlayerStateChange
@@ -69,14 +76,10 @@
 		}
 
 		function hideVideo() {
-		    var img_url = 'https://www.google.com/images/srpr/logo4w.png';
-		    $('#player').replaceWith('<img src="'+img_url+'">');
+		    var img_url = 'underconstruction.jpg';
+		    /*$('#player').replaceWith('<img src="'+img_url+'">');*/
 		}
 
-		$("#link").click(function(){
-		    $('#player').show(); // show player
-		    player.playVideo(); // begin playback
-		});
 
 		/* $(document).ready(function(){
     $('video').on('ended',function(){
@@ -93,6 +96,6 @@
 		}
 
 		})*/
-	</script>-->
+	</script>
 </body>
 </html>
