--- a/index.html
+++ b/index.html
@@ -25,16 +25,24 @@
 	</style>
 </head>
 <body>
-<div class="fullscreen-bg">
+
+<video  autoplay="autoplay" poster="" style="width:100%" title="original">
+<source src="original.m4v" type="video/mp4" />
+<source src="original.webm" type="video/webm" />
+</video>
+
+<a href="eh5v.html"></a>
+
+<!--<div class="fullscreen-bg">
 	<video  muted autoplay poster="underconstruction.jpg" class="fullscreen-bg__video">
 		<source src="underconstruction1.mp4" type="video/mp4">
 		<source src="underconstruction.webm" type="video/webm">
-		<source src="underconstruction.ogg" type="video/ogg">
-		<source src="underconstruction.3gp" >
+		<source src="underconstruction.ogg" type="“application/ogg">
+
 	</video>
 </div>
 
-<!--<div id="player"></div>
+<div id="player"></div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script>
