--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <source src="original.webm" type="video/webm" />
 </video>
 
-<a href="eh5v.html"></a>
+<a href="eh5v.html">entrar</a>
 
 <!--<div class="fullscreen-bg">
 	<video  muted autoplay poster="underconstruction.jpg" class="fullscreen-bg__video">
