--- a/eh5v.html
+++ b/eh5v.html
@@ -12,12 +12,16 @@
 </head>
 <body>
 <!-- Start EasyHtml5Video.com BODY section -->
-<style type="text/css">.easyhtml5video .eh5v_script{display:none}</style>
-<div class="easyhtml5video" style="position:relative;max-width:1588px;"><video  autoplay="autoplay" poster="eh5v.files/html5video/original.jpg" style="width:100%" title="original">
+
+<div class="easyhtml5video" style="position:relative;max-width:1588px;">
+
+<video  autoplay="autoplay" poster="eh5v.files/html5video/original.jpg" style="width:100%" title="original">
 <source src="eh5v.files/html5video/original.m4v" type="video/mp4" />
 <source src="eh5v.files/html5video/original.webm" type="video/webm" />
 <source src="eh5v.files/html5video/original.mp4" />
-</video><div class="eh5v_script"><a href="http://easyhtml5video.com">mobile html5 video</a> by EasyHtml5Video.com v3.5</div></div>
+</video>
+
+</div>
 <script src="eh5v.files/html5video/html5ext.js" type="text/javascript"></script>
 <!-- End EasyHtml5Video.com BODY section -->
 
