--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <body>
 
 <video  autoplay="autoplay" poster="" style="width:100%" title="original">
-<source src="original.m4v" type="video/mp4" />
-<source src="original.webm" type="video/webm" />
+<source src="eh5v.files/html5video/original.m4v" type="video/mp4" />
+<source src="eh5v.files/html5video/original.webm" type="video/webm" />
+<source src="eh5v.files/html5video/original.mp4" />
 </video>
 
 <a href="eh5v.html">entrar</a>
