--- a/index.html
+++ b/index.html
@@ -26,13 +26,10 @@
 </head>
 <body>
 
-<video  autoplay="autoplay" poster="" style="width:100%" title="original">
-<source src="eh5v.files/html5video/original.m4v" type="video/mp4" />
-<source src="eh5v.files/html5video/original.webm" type="video/webm" />
-<source src="eh5v.files/html5video/original.mp4" />
+<video  autoplay="autoplay" poster="" style="width:100%" title="Coming Soon">
+<source src="original.mp4" />
+<source src="novo.mp4" />
 </video>
-
-<a href="eh5v.html">entrar</a>
 
 <!--<div class="fullscreen-bg">
 	<video  muted autoplay poster="underconstruction.jpg" class="fullscreen-bg__video">
