--- a/index.html
+++ b/index.html
@@ -26,20 +26,14 @@
 </head>
 <body>
 
-<video  autoplay="autoplay" poster="" style="width:100%" title="Coming Soon">
-<source src="original.mp4" />
-<source src="novo.mp4" />
-</video>
-
-<!--<div class="fullscreen-bg">
+<div class="fullscreen-bg">
 	<video  muted autoplay poster="underconstruction.jpg" class="fullscreen-bg__video">
-		<source src="underconstruction1.mp4" type="video/mp4">
+		<source src="original.mp4" type="video/mp4">
+		<source src="original.m4v" type="video/mp4">
 		<source src="underconstruction.webm" type="video/webm">
-		<source src="underconstruction.ogg" type="“application/ogg">
-
 	</video>
 </div>
-
+<!--
 <div id="player"></div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
