Mensagem do commit

--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1>aqui fica a frase</h1>
+                    <blockquote>
+                        <h2><i>"The only place success comes before work is in the dictionary"</i></h2>
+                        <small>by <cite>Vince Lombardi</cite></small>
+                    </blockquote>
                 </div>
             </div>
         </div>
