--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     <script src="js/services/worksAPIService.js"></script>
     <script src="js/value/configValue.js"></script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-72538407-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 <body ng-app="sergioPortfolioApp">
     <div id="menu-mobile-all">
