--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </script>
 </head>
 <body ng-app="sergioPortfolioApp">
+    <img src="img/logo.png" style="display:none;" alt="">
     <div id="menu-mobile-all">
         <div class="hamburger">
             <div id="icon-mobile" >
