--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </script>
 </head>
 <body ng-app="sergioPortfolioApp">
-    <img src="img/logo.png" style="display:none;" alt="">
+    <img src="img/logo-1.png" style="display:none;" alt="Sergio Antonio Front End">
     <div id="menu-mobile-all">
         <div class="hamburger">
             <div id="icon-mobile" >
