--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Sergio Antonio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="thema-color" content="#142914">
+    <meta name="description" content="My name is Sérgio António and i am a front end developer. I am professional and hardworker, I am always updated to the most development techniques.">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="lib/angular-bootstrap-lightbox/dist/angular-bootstrap-lightbox.min.css">
