--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Personalizar Lollipop -->
         <meta name="theme-color" content="#142914">
-        <link rel="icon" sizes="192x192" href="img/icon.png">
+        <link rel="shortcut icon" sizes="192x192" href="img/icon.png">
     <!-- End Personalizar Lollipop -->
 
     <!-- Latest compiled and minified CSS -->
