--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- SEO -->
         <meta name="description" content="My name is Sérgio António and i am a front end developer. I am professional and hardworker, i am always updated to the most development techniques.">
         <link rel="canonical" href="http://sergiofrontend.github.io/">
-        <meta property="og:locale" content="en_EN">
-        <meta property="og:type" content="page">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:type" content="profile">
         <meta property="og:title" content="Portfolio | Sérgio António - Front End Developer">
         <meta property="og:description" content="My name is Sérgio António and i am a front end developer. I am professional and hardworker, i am always updated to the most development techniques.">
         <meta property="og:url" content="http://sergiofrontend.github.io/">
