--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <!-- SEO -->
         <meta name="description" content="My name is Sérgio António and i am a front end developer. I am professional and hardworker, i am always updated to the most development techniques.">
+        <meta name="keywords" content="sergio antonio, front end, front end developer, portfolio, web designer, web design, front end los angeles, front end portugal, front end usa, front end alentejo">
+        <meta name="robots" content="index/follow">
         <link rel="canonical" href="http://sergiofrontend.github.io/">
         <meta property="og:locale" content="en_US">
         <meta property="og:type" content="profile">
