--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link href="css/lib/animate.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet">
+    
+    <meta name="fragment" content="!">
 </head>
 <body >
     <div id="menu-mobile-all">
